--- a/techgallery.qmd
+++ b/techgallery.qmd
@@ -1,6 +1,7 @@
-#Overview
+# Technology Gallery
 
-Block 10 - 24 April - Dani/Elisabetta
-* Lecture: Technology gallery
-* Lab: Assignment II clinic
-Leadership technology gallery session - track of ideas. 2 weeks sign up. 
+Dani Arribas-Bel
+
+**Lecture**: Technology gallery
+
+**Lab**: Assignment II clinic.
